Add: 모달 및 기능 추가, 코드리뷰 반영 리팩토링

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <div style="position: relative; z-index: 5;"id="modalDiv"></div>
   </body>
 </html>
