--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div style="position: relative; z-index: 5" id="modalDiv"></div>
+    <div style="position: relative; z-index: 5;"id="modalDiv"></div>
+    <div id='modal'></div>
   </body>
 </html>
