--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Aircnb" content="best chicken place ever" />
     <!-- jQuery for iamport-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+    ></script>
     <!-- iamport.payment.js -->
-    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"
+    ></script>
     <title>Aircnb</title>
   </head>
   <body>
     <div id="root"></div>
-    <div style="position: relative; z-index: 5;"id="modalDiv"></div>
+    <div style="position: relative; z-index: 5" id="modalDiv"></div>
   </body>
 </html>
